# project-TiMP

./: .gitignore  CMakeLists.txt  README.md
Backend server/: CMakeLists.txt  DataBase.h  Dockerfile  clienthandler.cpp  clienthandler.h  functions_to_server.cpp  server.cpp  server.h
Client/: CMakeLists.txt  main.cpp  singleton.cpp  singleton.h  singleton_client.cpp  singleton_client.h
Front/: CMakeLists.txt  mainwindow.ui
Frontend/: CMakeLists.txt  authwidget.cpp  authwidget.h  authwidget.ui  clientapi.cpp  clientapi.h  functions.cpp  functions.h  main.cpp  mainmenuwidget.cpp  mainmenuwidget.h  mainmenuwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerwidget.cpp  registerwidget.h  registerwidget.ui  resources.qrc  statswidget.cpp  statswidget.h  statswidget.ui  taskwidget.cpp  taskwidget.h  taskwidget.ui  taskwidget.ui.autosave  windowmanager.cpp  windowmanager.h
Server/: CMakeLists.txt  DataBase.cpp  DataBase.h  Dockerfile  clienthandler.cpp  clienthandler.h  docker-compose.yml  functions_to_server.cpp  functions_to_server.h  main.cpp  server.cpp  server.h
backend_server/: functions_to_server.cpp  functions_to_server.h
client_ready/: CMakeLists.txt  main.cpp  singleton.h  singleton_client.cpp
functions_to_server_tests/: CMakeLists.txt  tst_task_tests.cpp
